# libpicotui

./: meson.build
src/: demo.c  picotui.c  picotui.h
